# adventofcodeCMake

./: CMakeLists.txt
day1/: CMakeLists.txt  solveP1.cpp  solveP2.cpp
day2/: CMakeLists.txt  solveP1.cpp  solveP2.cpp
day3/: CMakeLists.txt  solveP1.cpp  solveP2.cpp
day4/: CMakeLists.txt
