# CMakeList.txt : CMake project for adventofcode, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (day3PT1 "solveP1.cpp")
add_executable (day3PT2 "solveP2.cpp")

# TODO: Add tests and install targets if needed.
